--- a/assets/css/stripped-down-bootstrap.css
+++ b/assets/css/stripped-down-bootstrap.css
@@ -3,8 +3,8 @@
     display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
+    /*margin-right: -15px;*/
+    /*margin-left: -15px;*/
 }
 .row-x div{
     margin: 0 -15px;
