--- a/assets/css/stripped-down-bootstrap.css
+++ b/assets/css/stripped-down-bootstrap.css
@@ -6,8 +6,8 @@
     /*margin-right: -15px;*/
     /*margin-left: -15px;*/
 }
-.row-x div{
-    /*margin: 0 -15px;*/
+.row-x+div{
+    margin: 0 -15px;
 }
 .no-gutters > .col,
 .no-gutters > [class*="col-"] {
