--- a/assets/css/style-theme.css
+++ b/assets/css/style-theme.css
@@ -5,7 +5,7 @@
 #billing_billing{
      display: none;
 }
-#shipping_method{
+юwoocommerce-Price-amount amount{
     display: none;
 }
 .woocommerce form .form-row textarea{
