--- a/assets/css/stripped-down-bootstrap.css
+++ b/assets/css/stripped-down-bootstrap.css
@@ -7,7 +7,7 @@
     /*margin-left: -15px;*/
 }
 .row-x [class*="col-"]{
-    margin: 0 -15px;
+    /*margin: 0 -15px;*/
 }
 .no-gutters > .col,
 .no-gutters > [class*="col-"] {
