--- a/assets/css/style-theme.css
+++ b/assets/css/style-theme.css
@@ -17,6 +17,9 @@
 .price span.amount{
     margin-left: 5px;
 }
+#tc-page-wrap{
+    overflow: hidden;
+}
 @media (max-width: 767px) {
     #main-wrapper {
         padding-left: 0 !important;
