--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,7 +68,7 @@
     border-radius: 0;
 }
 .ma-page-plugin a:active, a:focus, a:hover{
-    color: transparent;
+    /*color: transparent;*/
     box-shadow: none;
     -webkit-box-shadow: none;
 }
