--- a/assets/css/style-theme.css
+++ b/assets/css/style-theme.css
@@ -38,12 +38,12 @@ p.woocommerce-shipping-destination {
 
 /*Test thema margin and padding 'container'*/
 .container.widget__container .row {
-    margin-left: -30px;
-    margin-right: -30px;
+    /*margin-left: -30px;*/
+    /*margin-right: -30px;*/
 }
 .container .flex-row.row{
-    margin-left: -50px;
-    margin-right: -45px;
+    /*margin-left: -50px;*/
+    /*margin-right: -45px;*/
 }
 
 @media (max-width: 767px) {
