--- a/assets/css/style-theme.css
+++ b/assets/css/style-theme.css
@@ -76,3 +76,9 @@ p.woocommerce-shipping-destination {
 @media only screen and (max-width: 760px), (min-device-width: 768px) and (max-device-width: 1024px) {
 
 }
+
+table{
+    table-layout: fixed !important;
+    font-size: 0.7em !important;
+    font-family: sans-serif !important;
+}
