added style first column 'remove icons'

--- a/assets/css/style-theme.css
+++ b/assets/css/style-theme.css
@@ -156,3 +156,9 @@ td.my-table {
 .woocommerce-error::before{
     color: #b81c23 !important;
 }
+.woocommerce-message{
+    padding-left: 20px;
+}
+th.product-remove{
+    width: 50px;
+}
