remove double price on page products

--- a/assets/css/style-theme.css
+++ b/assets/css/style-theme.css
@@ -208,3 +208,6 @@ table.table-my-style tr td:first-of-type {
 table.table-my-style{
     border: 2px solid #cecece;
 }
+p.price:nth-of-type(2) {
+    display:none;
+}
