Last change code

--- a/assets/css/style-theme.css
+++ b/assets/css/style-theme.css
@@ -211,3 +211,6 @@ table.table-my-style{
 p.price:nth-of-type(2) {
     color: transparent !important;
 }
+.first.button{
+    background: grey !important;
+}
