added autouploads add files recvizit

--- a/assets/css/style-theme.css
+++ b/assets/css/style-theme.css
@@ -184,7 +184,8 @@ th.product-remove {
 
 form.recvizit {
     flex-wrap: wrap;
-    border: 1px solid #d8d8d8;
+    border: 1px solid #c7c7c7;
+    border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -212,5 +213,10 @@ p.price:nth-of-type(2) {
     color: transparent !important;
 }
 .first.button{
-    background: grey !important;
+    /* background: grey !important; */
+    border: 1px solid #c1c1c1 !important;
+    border-radius: 5px !important;
 }
+/*#billing_company::placeholder{*/
+/*    color: blue !important;*/
+/*}*/
