--- a/assets/css/style-theme.css
+++ b/assets/css/style-theme.css
@@ -71,9 +71,7 @@ p.woocommerce-shipping-destination {
 .woocommerce .quantity .qty {
     width: 5em !important;
 }
-th.my-table-th{
-    text-align: center !important;
-}
+
 /* Table style */
 @media screen and (max-width: 1800px) {
     td {
@@ -83,12 +81,8 @@ th.my-table-th{
         padding: 14px 0 !important;
     }
 
-    td.my-table {
-        padding: 5px !important;
-    }
-
     th.my-table-th {
-        padding: 10px !important;
+        padding: 8px !important;
         font-size: 13px !important;
         white-space: pre-wrap !important;
         text-align: center !important;
@@ -107,7 +101,7 @@ th.my-table-th{
     }
 
     th.my-table-th {
-        padding: 10px !important;
+        padding: 8px !important;
         font-size: 13px !important;
         white-space: pre-wrap !important;
         text-align: center !important;
@@ -126,11 +120,9 @@ th.my-table-th{
     th.my-table {
         padding: 4px 1px !important;
     }
-    .table-my-style td {
-        padding: 0 1px !important;
-    }
+
     th.my-table-th {
-        padding: 8px !important;
+        padding: 5px !important;
         font-size: 12px !important;
         white-space: pre-wrap !important;
         text-align: center !important;
@@ -173,9 +165,9 @@ td.my-table {
     white-space: nowrap !important;
 }
 
-/*.table-my-style td {*/
-/*    padding: 5px 1px !important;*/
-/*}*/
+.table-my-style td {
+    padding: 5px 1px !important;
+}
 
 /*Убираем цену товара со страницы всех товаров*/
 .products li a .price {
