Added last work version plugin to canister

--- a/assets/css/style-theme.css
+++ b/assets/css/style-theme.css
@@ -9,7 +9,7 @@
 }
 
 .woocommerce-Price-amount.amount {
-    /*display: none;*/
+    display: block !important;
 }
 
 p.woocommerce-shipping-destination {
